third_party/move/move-compiler-v2/transactional-tests/tests/no-v1-comparison/closures/round-trip/bug_16363.disassembled.exp
processed 2 tasks
task 0 lines 3-20:  publish [// Bytecode version v8]
Error: Unable to publish module '0000000000000000000000000000000000000000000000000000000000000042::foo'. Got VMError: {
    major_status: STLOC_TYPE_MISMATCH_ERROR,
    sub_status: None,
    location: 0x42::foo,
    indices: [(FunctionDefinition, 0)],
    offsets: [(FunctionDefinitionIndex(0), 1)],
}
task 1 lines 24-37:  publish [// Bytecode version v8]
Error: error: unknown module `0000000000000000000000000000000000000000000000000000000000000042::foo`
   ┌─ test:31:5
   │
31 │     pack_closure foo::make_foo<T0>, 0
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


